--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,25 @@
-altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
-attrs==25.3.0
+attrs==23.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
-db-dtypes==1.4.3
+defusedxml==0.7.1
 distro==1.9.0
 docstring_parser==0.16
 faiss-cpu==1.11.0
+fastjsonschema==2.19.1
 filelock==3.18.0
 Flask==3.1.1
 fpdf==1.7.2
 fsspec==2025.5.1
-gitdb==4.0.12
-GitPython==3.1.44
-google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
-google-api-python-client==2.174.0
 google-auth==2.40.3
-google-auth-httplib2==0.2.0
 google-cloud-aiplatform==1.100.0
 google-cloud-bigquery==3.34.0
 google-cloud-core==2.4.3
@@ -30,15 +27,14 @@ google-cloud-resource-manager==1.14.2
 google-cloud-storage==2.19.0
 google-crc32c==1.7.1
 google-genai==1.23.0
-google-generativeai==0.8.5
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
+greenlet==3.0.3
 grpc-google-iam-v1==0.14.2
 grpcio==1.73.1
-grpcio-status==1.71.2
+grpcio-status==1.73.1
 h11==0.16.0
 httpcore==1.0.9
-httplib2==0.22.0
 httpx==0.28.1
 huggingface-hub==0.33.1
 idna==3.10
@@ -46,58 +42,69 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.10.0
 joblib==1.5.1
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
 MarkupSafe==3.0.2
+mistune==3.0.2
 mpmath==1.3.0
-narwhals==1.45.0
+nbclient==0.10.0
+nbconvert==7.16.3
+nbformat==5.10.4
 networkx==3.5
+nltk==3.9.1
 numpy==2.3.1
 openai==1.93.0
 packaging==25.0
 pandas==2.3.0
-pillow==11.2.1
+pandocfilters==1.5.1
+pillow==11.3.0
+platformdirs==4.2.0
+playwright==1.43.0
 proto-plus==1.26.1
-protobuf==5.29.5
-pyarrow==20.0.0
+protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic_core==2.33.2
-pydeck==0.9.1
-pyparsing==3.2.3
+pyee==11.1.0
+Pygments==2.17.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
+pywin32==306
 PyYAML==6.0.2
-referencing==0.36.2
+pyzmq==25.1.2
+referencing==0.34.0
 regex==2024.11.6
 requests==2.32.4
-rpds-py==0.26.0
+rpds-py==0.18.0
 rsa==4.9.1
 safetensors==0.5.3
 scikit-learn==1.7.0
 scipy==1.16.0
-sentence-transformers==4.1.0
+sentence-transformers==5.0.0
+sentencepiece==0.2.0
 setuptools==80.9.0
 shapely==2.1.1
 six==1.17.0
-smmap==5.0.2
 sniffio==1.3.1
-streamlit==1.46.1
+soupsieve==2.5
 sympy==1.14.0
 tenacity==8.5.0
 threadpoolctl==3.6.0
+tinycss2==1.2.1
 tokenizers==0.21.2
-toml==0.10.2
 torch==2.7.1
-tornado==6.5.1
+tornado==6.4
 tqdm==4.67.1
+traitlets==5.14.2
 transformers==4.53.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzdata==2025.2
-uritemplate==4.2.0
 urllib3==2.5.0
-watchdog==6.0.0
+webencodings==0.5.1
 websockets==15.0.1
 Werkzeug==3.1.3
