--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ google-crc32c==1.7.1
 google-genai==1.23.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
-greenlet==2.0.2
+greenlet
 grpc-google-iam-v1==0.14.2
 grpcio==1.73.1
 grpcio-status==1.73.1
@@ -84,7 +84,7 @@ safetensors==0.5.3
 scikit-learn==1.7.0
 scipy==1.16.0
 sentence-transformers==5.0.0
-sentencepiece==0.1.99
+sentencepiece
 setuptools==80.9.0
 shapely==2.1.1
 six==1.17.0
