--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+db-dtypes
 defusedxml==0.7.1
 distro==1.9.0
 docstring_parser==0.16
